[tool.poetry]
name = "blasematch"
version = "0.1.0"
description = ""
authors = ["leo60228 <leo@60228.dev>"]
license = "GPL-2.0-only"

[tool.poetry.dependencies]
python = "^3.8"
pybaseball = "^2.2.0"
blaseball-mike = "^5.11.0"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
